@@ -4,9 +4,7 @@
    * @author Matthew McNaney <mcnaney at gmail dot com>
    */
 
-
 $use_permissions = TRUE;
-$permissions['edit'] = dgettext('categories', 'Edit categories');
-$permissions['delete'] = dgettext('categories', 'Delete categories');
+$permissions['delete_categories'] = dgettext('categories', 'Delete categories');
 
 ?>
