@@ -200,15 +200,17 @@ class Category{
         $vars['subaction'] = 'edit';
         $links[] = PHPWS_Text::secureLink(dgettext('categories', 'Edit'), 'categories', $vars);
 
-        if (javascriptEnabled()) {
-            $js_vars['QUESTION'] = dgettext('categories', 'Are you sure you want to delete this category?');
-            $js_vars['ADDRESS']  = 'index.php?module=categories&amp;action=admin&amp;subaction=deleteCategory&amp;category_id=' . 
-                $this->getId() . '&amp;authkey=' . Current_User::getAuthKey();
-            $js_vars['LINK']     = dgettext('categories', 'Delete');
-            $links[] = Layout::getJavascript('confirm', $js_vars);
-        } else {
-            $vars['subaction'] = 'delete';
-            $links[] = PHPWS_Text::moduleLink(dgettext('categories', 'Delete'), 'categories', $vars);
+        if (Current_User::allow('categories', 'delete_categories')) {
+            if (javascriptEnabled()) {
+                $js_vars['QUESTION'] = dgettext('categories', 'Are you sure you want to delete this category?');
+                $js_vars['ADDRESS']  = 'index.php?module=categories&amp;action=admin&amp;subaction=deleteCategory&amp;category_id=' . 
+                    $this->getId() . '&amp;authkey=' . Current_User::getAuthKey();
+                $js_vars['LINK']     = dgettext('categories', 'Delete');
+                $links[] = Layout::getJavascript('confirm', $js_vars);
+            } else {
+                $vars['subaction'] = 'delete';
+                $links[] = PHPWS_Text::moduleLink(dgettext('categories', 'Delete'), 'categories', $vars);
+            }
         }
 
         $tpl['ACTION'] = implode(' | ', $links);
