@@ -1,3 +1,6 @@
+27 September 2007
++ Fixed: Permissions were not being used.
+
 Version 2.1.9
 ---------------------------------------------------------------------
 6 September 2007
